@@ -12,30 +12,19 @@ And unpack the project: `unzip PhyloCNV-master.zip`
 
 ### Install the software
 
-Options for installing the software:
-
-**Run setup.py (recommended)**  
+**Run setup.py to install dependencies**  
 `python PhyloCNV/setup.py install` or  
 `sudo python PhyloCNV/setup.py install` to install as a superuser or  
 `python PhyloCNV/setup.py install --user` to install locally (~/.local)  
 
-**Manual install**  
-
-Alternative to setup.py. First, check that required python libraries are installed. You should be able to enter the following command in the python interpreter without getting an error:  
+You can skip this step if the required python libraries are already installed. You should be able to enter the following command in the python interpreter without getting an error:  
 `>>> import Bio.SeqIO`  
 `>>> import numpy`  
 `>>> import pysam`  
-`>>> import microbe_census`
 
-Update your PYTHONPATH environmental variable (replace '/path/to' with the appropriate path on your system):  
-`export PYTHONPATH=$PYTHONPATH:/path/to/PhyloCNV` 
+**Update your PATH**
 
-Add this to your .bash_profile to avoid entering the command in the future (you will need to open a new shell for this to take effect):  
-`echo -e "\nexport PYTHONPATH=\$PYTHONPATH:/path/to/PhyloCNV" >> ~/.bash_profile` 
-
-### Update your PATH (optional)
-
-All of PhyloCNV's scripts are located in the directory PhyloCNV/scripts.  Optionally, add this directory to your PATH (replace '/path/to' with the appropriate path on your system):  
+All of PhyloCNV's scripts are located in the directory PhyloCNV/scripts. To run these scripts from anywhere, add this directory to your PATH (replace '/path/to' with the appropriate path on your system):  
 `export PATH=$PATH:/path/to/PhyloCNV/scripts` 
 
 Optionally, add this to your .bash_profile to avoid entering the command in the future (you will need to open a new shell for this to take effect):  
@@ -44,6 +33,9 @@ Optionally, add this to your .bash_profile to avoid entering the command in the 
 ### Testing
 You should be able to enter the command into your terminal without getting an error:  
 `run_phylo_cnv.py -h`
+
+For more complete testing, run:   
+`python tests/test_phylo_cnv.py` 
 
 ### Update PhyloCNV
 Move to installation directory, pull the latest version, and install:  
