@@ -8,6 +8,7 @@
 #
 
 import argparse, sys, os, gzip, numpy as np
+sys.path.append(os.path.abspath(os.path.join(os.path.dirname(__file__), '..')))
 from phylo_cnv import utility
 
 
