@@ -4,8 +4,8 @@
 # Copyright (C) 2015 Stephen Nayfach
 # Freely distributed under the GNU General Public License (GPLv3)
 
-import argparse, sys, os
-import platform
+import argparse, sys, os, platform
+sys.path.append(os.path.abspath(os.path.join(os.path.dirname(__file__), '..')))
 from phylo_cnv import utility
 
 def get_program():
